--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,11 @@
         </activity>
         <activity
             android:name="com.androidbootcamp.sunshine.SettingsActivity"
-            android:label="@string/title_activity_settings" >
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="com.androidbootcamp.sunshine.MyActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.androidbootcamp.sunshine.MyActivity" />
         </activity>
     </application>
 
